2007-05-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CodeGeneratorFromExpressionTest.cs: Added ArrayCreateExpressionTest.

2007-04-13  Frederik Carlier  <frederik.carlier@carlier-online.be>

	* CodeGeneratorFromBinaryOperatorTest.cs: Regression test for bug 81372, test
	for code generated when comparing against null (Nothing in Visual Basic)

2007-02-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* VBCodeProviderTest.cs: Modified tests to also cover fix for bug
	#80920. No longer use Assert class in separate AppDomain since it
	will only work if nunit.framework assembly is in the GAC.
	* CodeGeneratorFromTypeTest.cs: Fixed tests to pass on MS.

2007-02-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* VBCodeProviderTest.cs: Mark tests that rely on vbnc as NotWorking,
	and remove comment about mbas.

2006-10-22  Zoltan Varga  <vargaz@gmail.com>

	* VBCodeProviderTest.cs: Mark this as NotWorking since mbas is no more.

2006-08-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* VBCodeProviderTest.cs: Modified tests to verify fix for bug
	#78384, and check support for linked resources.

2006-04-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeGeneratorFromNamespaceTest.cs: Added tests for
	GenerateCodeFromNamespace.

2005-12-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeGeneratorFromExpressionTest.cs: Added tests for
	CodePrimitiveExpression.

2005-11-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeGeneratorFromStatementTest.cs: Added tests for
	CodeAssignStatement, CodeAttachEventStatement, CodeConditionStatement,
	CodeExpressionStatement, CodeIterationStatement,
	CodeLabeledStatement, CodeMethodReturnStatement, 
	CodeRemoveEventStatement and CodeSnippetStatement.

2005-11-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeGeneratorTestBase.cs: Removed Code property, added Generate 
	overload taking CodeGeneratorOptions, added NewLine property.