@@ -1,3 +1,8 @@
+2007-05-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* CodeGeneratorFromExpressionTest.cs: Added EscapedIdentifierTest.
+	* CodeGeneratorFromStatementTest.cs: Added CodeAttachEventStatementKeywordTest.
+
 2007-05-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* CodeGeneratorFromExpressionTest.cs: Added ArrayCreateExpressionTest.
